Good Working Task 3

--- a/project1/templates/project1/show_plot.html
+++ b/project1/templates/project1/show_plot.html
@@ -12,7 +12,7 @@
 
     <div class="main-text">
         {% if image_url %}
-            <img src="{{ image_url }}" alt="Generated plot">
+            <img src="{{ image_url }}" alt="Iris Scatter Plot" style="max-width: 100%; height: auto;">
         {% else %}
             <p>No image to show.</p>
         {% endif %}
