--- a/project3/templates/project3/index.html
+++ b/project3/templates/project3/index.html
@@ -60,12 +60,12 @@
             </div>
         </div>
 
-        <div class="decision-tree-button-container">
+    <div class="decision-tree-button-container">
     <a href="{% url 'project3:decision_tree' %}" class="analysis-button">
         Generate Decision Tree Analysis →
     </a>
-    <a href="{% url 'project3:linear_regression' %}" class="analysis-button">
-        Generate Linear Regression Analysis →
+    <a href="{% url 'project3:logistic_regression' %}" class="analysis-button">
+        Generate Logistic Regression Analysis →
     </a>
 </div>
 
